abstract service implementation + sonarLint errors