@@ -1,5 +1,6 @@
 package com.example.printifybackend.item;
 
+import com.example.printifybackend.AbstractEntityService;
 import com.example.printifybackend.Converter;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -9,41 +10,40 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
-public class ServiceItem {
+public class ServiceItem extends AbstractEntityService<EntityItem, DaoItem> {
 
-    private final DaoItem daoItem;
     @Autowired
     public ServiceItem(DaoItem daoItem) {
-        this.daoItem = daoItem;
+        super(daoItem);
     }
 
     public DtoItem findByUuidWithImage(String uuid) {
-        return Converter.convertJoined(this.daoItem.findByUuidWithImage(uuid), DtoItem.class);
+        return Converter.convertJoined(this.dao.findByUuidWithImage(uuid), DtoItem.class);
     }
 
     public List<DtoItem> findAllWithImages() {
-        return this.daoItem.findAllWithImages()
+        return this.dao.findAllWithImages()
                 .stream()
                 .map(e -> Converter.convertJoined(e, DtoItem.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<DtoItem> findInternetVisibleWithImages() {
-        return this.daoItem.findInternetVisibleWithImages()
+        return this.dao.findInternetVisibleWithImages()
                 .stream()
                 .map(e -> Converter.convertJoined(e, DtoItem.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<DtoItem> findByUuidsWithImages(List<String> uuids) {
         if (uuids == null || uuids.isEmpty()) return Collections.emptyList();
-        return this.daoItem.findByUuidsWithImages(uuids)
+        return this.dao.findByUuidsWithImages(uuids)
                 .stream()
                 .map(e -> Converter.convertJoined(e, DtoItem.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void deleteById(Long id) {
-        this.daoItem.deleteById(id);
+        this.dao.deleteById(id);
     }
 }
