@@ -1,10 +1,11 @@
 package com.example.printifybackend.user;
 
+import com.example.printifybackend.AbstractEntityService;
 import com.example.printifybackend.Converter;
 import com.example.printifybackend.auth.Privilege;
-import com.google.gson.Gson;
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.lang3.StringUtils;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
@@ -12,17 +13,21 @@ import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
-@RequiredArgsConstructor
-public class ServiceUser {
+public class ServiceUser extends AbstractEntityService<EntityUser, DaoUser> {
 
-    private final DaoUser daoUser;
     private final PasswordEncoder passwordEncoder;
 
+    @Autowired
+    public ServiceUser(DaoUser dao, PasswordEncoder passwordEncoder) {
+        super(dao);
+        this.passwordEncoder = passwordEncoder;
+    }
+
+
     public List<DtoUser> getUsers() {
-        return this.daoUser.findAll().stream().map(user -> Converter.convert(user, DtoUser.class)).collect(Collectors.toList());
+        return this.dao.findAll().stream().map(user -> Converter.convert(user, DtoUser.class)).toList();
     }
 
     public Set<Privilege> getPrivilegesForUser(EntityUser user) {
@@ -37,18 +42,15 @@ public class ServiceUser {
         EntityUser user = new EntityUser();
         user.setUsername(username);
         user.setPassword(this.passwordEncoder.encode(rawPassword));
-        this.save(user);
+        this.insert(user);
     }
 
     public EntityUser findByUsername(String username) {
-        return this.daoUser.findByUsername(username);
+        return this.dao.findByUsername(username);
     }
 
     public boolean existsByUsername(String username) {
-        return this.daoUser.existsByUsername(username);
+        return this.dao.existsByUsername(username);
     }
 
-    public void save(EntityUser user) {
-        this.daoUser.insert(user);
-    }
 }
